# goral

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENCE  README.md  deny.toml
.github/ISSUE_TEMPLATE/: BUG_REPORT.yaml
.github/site/: book.toml
.github/site/src/: download.sh  healthcheck.md  install.sh  installation.md  kv-log.md  setup.md  system-requirements.md  system.md
.github/workflows/: docs.yml  release.yml
src/: configuration.rs  diagnostics.rs  http.rs  lib.rs  main.rs  notifications.rs  storage.rs
src/google/: datavalue.rs  mod.rs  sheet.rs  spreadsheet.rs
src/messenger/: configuration.rs  discord.rs  mod.rs  slack.rs  telegram.rs
src/rules/: mod.rs
src/services/: mod.rs
src/services/general/: configuration.rs  mod.rs
src/services/healthcheck/: configuration.rs  grpc_probe_test.Test.rs  mod.rs
src/services/kv/: configuration.rs  mod.rs
src/services/logs/: configuration.rs  mod.rs
src/services/metrics/: configuration.rs  mod.rs
src/services/system/: collector.rs  configuration.rs  mod.rs  ssh.rs
