[package]
name = "goral"
version = "0.1.18"
edition = "2024"
author = "Maksim Ryndin"
license = "Apache-2.0"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "goral"

[profile.release]
codegen-units = 1
opt-level = 3
overflow-checks = true
strip = "debuginfo"

[profile.dev]
codegen-units = 8
opt-level = 1

[dependencies]
anyhow = { version = "1.0", default-features = false}
async-trait = { version = "0.1", default-features = false}
chrono = { version = "0.4", default-features = false}
clap = { version = "4.6", default-features = false, features = ["derive", "std", "color", "help", "usage", "error-context", "suggestions"] }
config = { version = "0.15", default-features = false, features = ["toml"] }
futures = { version = "0.3", default-features = false}
getrandom = { version = "0.4", default-features = false}
google-sheets4 = { version = "7.0", default-features = false, features = ["yup-oauth2", "yup-oauth2-service-account"]}
http = { version = "1.4", default-features = false}
http-body-util = { version = "0.1.3", default-features = false}
hyper = { version = "1", default-features = false, features = ["http1", "http2", "client", "server"]} # using the same version as google-sheets4
hyper-rustls = { version = "0.27", default-features = false, features = ["http1", "native-tokio", "rustls-native-certs", "logging"]} # using the same version as google-sheets4
hyper-util = { version = "0.1", default-features = false}
lazy_static = { version = "1.5", default-features = false}
prometheus-parse = { version = "0.2.5", default-features = false}
prost = { version = "0.14", default-features = false}
regex = { version = "1", default-features = false, features = ["std", "unicode"] } # use the same version as current crates
serde = { version = "^1.0", default-features = false}
serde_derive = { version = "^1.0", default-features = false}
serde_json = { version = "^1.0", default-features = false}
serde_valid = { version = "2.0", default-features = false, features = ["toml"] }
sysinfo = { version = "0.35", default-features = false, features = ["system", "network", "user", "disk"]  }
tokio = { version = "^1.52", default-features = false, features = ["sync", "signal", "io-std", "process", "net"] }
tonic = { version = "^0.14", default-features = false, features = ["router", "transport", "codegen"]}
tonic-health = { version = "0.14", default-features = false}
tonic-prost = { version = "0.14", default-features = false}
tracing = { version = "0.1", default-features = false}
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "json", "env-filter", "ansi"] }
url = { version = "2", default-features = false, features = ["serde"] }
yup-oauth2 = { version = "12.1.2", features = ["service-account", "hyper-rustls"] }

[target.'cfg(target_os = "linux")'.dependencies]
logwatcher2 = { git = "https://github.com/semplico/logwatcher2.git", rev="9124084dedf7cca548a7be01f0195b876683749a" }
psutil = { version = "5.4.0", default-features = false, features = ["disk"]}

[dev-dependencies]
prost = "0.14"
rand = "0.10"
tonic-build = "0.14"
